<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/remote_sources">

    <ListPreference
        android:key="sources_sort_order"
        android:title="@string/sort_order"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="sources_grid"
        android:title="@string/show_in_grid_view" />

    <PreferenceScreen
        android:fragment="org.koitharu.kotatsu.settings.sources.manage.SourcesManageFragment"
        android:key="remote_sources"
        android:persistent="false"
        android:title="@string/manage_sources" />

    <PreferenceScreen
        android:fragment="org.koitharu.kotatsu.settings.sources.manage.plugins.PluginsManageFragment"
        android:key="plugins_manager"
        android:persistent="false"
        android:title="@string/manage_plugins" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="auto_plugins"
        android:summary="@string/auto_update_plugins_summary"
        android:title="@string/auto_update_plugins" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="use_android_installed_extensions"
        android:summary="@string/use_android_installed_extensions_summary"
        android:title="@string/use_android_installed_extensions" />

    <Preference
        android:key="mihon_extension_errors"
        android:persistent="false"
        android:summary="@string/mihon_extension_errors_summary"
        android:title="@string/mihon_extension_errors" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="sources_enabled_all"
        android:summary="@string/enable_all_sources_summary"
        android:title="@string/enable_all_sources"
        app:allowDividerAbove="true" />

    <Preference
        android:key="sources_catalog"
        android:persistent="false"
        android:title="@string/sources_catalog" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="no_nsfw"
        android:summary="@string/disable_nsfw_summary"
        android:title="@string/disable_nsfw" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="sources_hide_broken"
        android:summary="@string/hide_broken_sources_summary"
        android:title="@string/hide_broken_sources" />

	<Preference
		android:key="repair_broken_sources"
		android:persistent="false"
		android:summary="@string/repair_broken_sources_summary"
		android:title="@string/repair_broken_sources" />

    <ListPreference
        android:entries="@array/incognito_nsfw_options"
        android:key="incognito_nsfw"
        android:title="@string/incognito_for_nsfw"
        app:useSimpleSummaryProvider="true" />


    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="mirror_switching"
        android:summary="@string/mirror_switching_summary"
        android:title="@string/mirror_switching"
        app:allowDividerAbove="true" />

    <SwitchPreferenceCompat
        android:key="handle_links"
        android:persistent="false"
        android:summary="@string/handle_links_summary"
        android:title="@string/handle_links" />

</androidx.preference.PreferenceScreen>
