<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="discord_rpc"
		android:layout="@layout/preference_toggle_header"
		android:title="@string/discord_rpc" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:dependency="discord_rpc"
		android:key="discord_rpc_oauth"
		android:summary="@string/discord_rpc_oauth_summary"
		android:title="@string/discord_rpc_oauth" />

	<EditTextPreference
		android:dependency="discord_rpc"
		android:key="discord_token"
		android:summary="@string/discord_token_summary"
		android:title="@string/discord_token" />

	<Preference
		android:dependency="discord_rpc"
		android:key="discord_oauth_signin"
		android:summary="@string/discord_rpc_oauth_summary"
		android:title="@string/sign_in" />

	<SwitchPreferenceCompat
		android:dependency="discord_rpc"
		android:key="discord_rpc_skip_nsfw"
		android:summary="@string/rpc_skip_nsfw_summary"
		android:title="@string/disable_nsfw" />

</androidx.preference.PreferenceScreen>
